[tool.poetry]
name = "typer_multi_command_template"
version = "0.1.0"
description = ""
authors = ["skarfie123 <rahulpai@rocketmail.com>"]
readme = "README.md"
packages = [{ include = "typer_multi_command_template" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.9.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
typer_multi_command_template = "typer_multi_command_template:cli"
